Style search bar's wrapper to prevent flickering

--- a/packages/@okta/vuepress-theme-prose/assets/css/components/_searchBar.scss
+++ b/packages/@okta/vuepress-theme-prose/assets/css/components/_searchBar.scss
@@ -25,6 +25,10 @@ $redesign_placeholder_color: #616161;
 
 .search--wrapper {
   position: relative;
+  width: 100%;
+  height: 38px;
+  border-radius: 4px;
+  background-color: white;
 
   .input--icon {
     position: absolute;
